--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <p class="intro-text EN">On this website you'll find who I'm, what am I good at, what I've
                         already done!</p>
                     <p class="intro-text FR">Ce site présente mon parcours scolaire, professionnel, mes compétences
-                        ainsi que mes centres d'intérêts.
+                        ainsi que mes centres d'intérêt.
                     </p>
                     <p class="intro-text IT">Questo sito presenta il mio percorso scolastico, professionale, le mie
                         competenze e i miei centri di interessi.
@@ -152,7 +152,7 @@
             <p class="EN">
                 Hi, my name is Germain.I'm a 24 years old student in an engineering school.
                 <br>
-                Currently, I'm doing a professional training contract within Atos Integration as analyst and developer.
+                Currently, I'm doing a professional training contract within Atos Integration as an analyst / developer.
                 <br>
                 <br>
                 At the beginning if I choose to work in computer science that was because it was an intellectually
@@ -167,7 +167,7 @@
                 in various professional and sporting challenges.
                 <br>
                 I appreciate having responsibilities, to be able to take initiative and the teamwork. In the past this
-                allowed me to develop myself as head of the division office of partnership in the students union of my
+                allowed me to develop myself as head of the division office of partnerships in the student union of my
                 school.
             </p>
             <p class="FR">
@@ -178,7 +178,7 @@
                 <br>
                 <br>
                 J'ai choisi l'informatique car c'est un domaine stimulant intellectuellement me permettant d'exercer ma
-                curiosité et dans lequel il est nécessaire de se remettre en question, de s'adapter rapidement.
+                curiosité et dans lequel il est nécéssaire de se remettre en question, de s'adapter rapidement.
                 <br>
                 <br>
                 Ce qui me plaît c'est le contact humain, savoir transmettre et échanger.
@@ -235,7 +235,7 @@
                     learned from those experiences.
                 </p>
                 <p class="FR">
-                    Vous trouverez ici un résumé des differents postes que j'ai occupé, ce que j'y ai fait et appris.
+                    Vous trouverez ici un résumé des différents postes que j'ai occupés, ce que j'y ai fait et appris.
                 </p>
                 <p class="IT">
                     Troverete qui un riassunto dei vari posti che ho occupato, quello che ho fatto e imparato.
@@ -302,7 +302,7 @@
                             </div>
                             <div class="timeline-body">
                                 <p class="jobTittle EN">Assistance Coordinator</p>
-                                <p class="jobTittle FR">Chargé d'Assistance</p>
+                                <p class="jobTittle FR">Chargé d'assistance</p>
                                 <p class="jobTittle IT">Coordinatore Assistenza</p>
                                 <p>
                                     <small class="text-muted EN">
@@ -347,7 +347,7 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="timeline-title EN">Independant</h4>
+                                <h4 class="timeline-title EN">Independent</h4>
                                 <h4 class="timeline-title FR">indépendant</h4>
                                 <h4 class="timeline-title IT">Indipendente</h4>
                             </div>
@@ -372,7 +372,7 @@
                                     <br>
                                 </p>
                                 <p class="description EN">
-                                    Tutoring for high-school pupils in mathematics and physics.
+                                    Tutoring for highschool pupils in mathematics and physics.
                                     <br>
                                     Intake of teaching capacities and knowledge transmission.
                                 </p>
@@ -441,7 +441,7 @@
                                 <p class="description IT">
                                     Manutenzione di un parco rete ed appoggio utilizzatore.
                                     <br>
-                                    Integrazione en un gruppo di lavoro, preso di iniziative e di responsabilità.
+                                    Integrazione in un gruppo di lavoro, preso di iniziative e di responsabilità.
                                 </p>
                             </div>
                         </div>
@@ -523,9 +523,9 @@
                 was studying and working, I obtained new skills which you could find in the section below.
             </p>
             <p class="FR">
-                J'ai toujours voulu travailler en tant qu'ingénieur. Pour se faire, j'ai étudié en France et en Italie.
+                J'ai toujours voulu travailler en tant qu'ingénieur. Pour ce faire, j'ai étudié en France et en Italie.
                 En parallèle de mes études, et pour financer ces dernières, j'ai travaillé durant la totalité de ma
-                scolarité. Vous trouverez dans la section ci-dessous l'ensemble des élements inhérents à mon parcours.
+                scolarité. Vous trouverez dans la section ci-dessous l'ensemble des éléments inhérents à mon parcours.
             </p>
             <p class="IT">
                 Ho sempre voluto lavorare come ingegnere. Per farsi, ho studiato in Francia ed in Italia.
@@ -557,13 +557,13 @@
                         Database: Oracle - SQL - OLAP (BI)
                     </li>
                     <li>
-                        Project gestion: Maven - Git - Apache Subversion
+                        Project management: Maven - Git - Apache Subversion
                     </li>
                     <li>
                         System: Unix / Windows (client and server)
                     </li>
                     <li>
-                        Thoerical sciences: Physics - Mathematical analysis - Algebra
+                        theoretical sciences: Physics - Mathematical analysis - Algebra
                     </li>
                 </ul>
             </div>
@@ -811,7 +811,7 @@
             <div class="EN">
                 <ul>
                     <li>
-                        Critical mind
+                        Critical Mind
                     </li>
                     <li>
                         Relationship management
@@ -834,25 +834,25 @@
                         Enseignement
                     </li>
                 </ul>
-        </div>
+            </div>
 
-        <div class="IT">
-            <ul>
-                <li>
-                    Spirito critico
-                </li>
-                <li>
-                    Gestione delle relazioni
-                </li>
-                <LI>
-                    Insegnamento
-                </li>
-            </ul>
-        </div>
+            <div class="IT">
+                <ul>
+                    <li>
+                        Spirito critico
+                    </li>
+                    <li>
+                        Gestione delle relazioni
+                    </li>
+                    <LI>
+                        Insegnamento
+                    </li>
+                </ul>
+            </div>
 
-        <br>
-        <hr class="hrFull"/>
-    </div>
+            <br>
+            <hr class="hrFull"/>
+        </div>
 
     </div>
 </section>
@@ -864,7 +864,7 @@
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2 class="EN">Hobbies</h2>
-                <h2 class="FR">Centres d'interêts</h2>
+                <h2 class="FR">Centres d'interêt</h2>
                 <h2 class="IT">Centro di interesse</h2>
 
                 <p class="EN">I
@@ -889,15 +889,15 @@
                         competitions in 2015 and today my handicap is under 25.
                     </p>
                     <p class="FR">
-                        J'ai commencé à jouer au golf en 2013, j'aime ce sport car il nécéssite sang-froid et
+                        J'ai commencé à jouer au golf en 2013, j'aime ce sport car il nécessite sang-froid et
                         clairvoyance ainsi qu'une grande capacité de concentration.
                         Ce jeu est également très utile pour éclaircir son esprit.
-                        J'ai commencé la ompétition en 2015 et aujourd'hui mon handicap est inférieur à 25.
+                        J'ai commencé la compétition en 2015 et aujourd'hui mon handicap est inférieur à 25.
                     </p>
                     <p class="IT">
                         Ho iniziato a giocare al golf nel 2013, mi piace questo sport, perché richiede mantenere i nervi
                         saldi, di essere
-                        concentrato per ore durante il gioco. E 'anche molto utile per schiarirsi le idee.
+                        concentrato per ore durante il gioco. E anche molto utile per schiarirsi le idee.
                         Ho iniziatoconcorsi nel 2015 e oggi il mio handicap è sotto 25.
                     </p>
                 </div>
@@ -908,13 +908,13 @@
                     <p class="EN">
                         My first experience with rowing was in 2014, I did this sport for 2 years with my school. What I
                         liked was the team spirit, it's important to overcome yourself for the team. The best memory
-                        that I've got was in 2015 when we won the university national championship in our category.
+                        that I've gotten was in 2015 when we won the university national championship in our category.
                     </p>
                     <p class="FR">
                         J'ai pratiqué ce sport 2 ans au sein de l'équipe masculine de Polytech' Tours.
                         Ce qui m'a attiré, c'est l'esprit d'équipe, le fait qu'il soit important de se surpasser pour
                         l'équipe.
-                        En 2015, avec mon équipe, nous avons remportés le championat de France universitaire dans
+                        En 2015, avec mon équipe, nous avons remporté le championnat de France universitaire dans
                         notre catégorie.
                     </p>
                     <p class="IT">
@@ -931,18 +931,19 @@
                          height="155">
                     <p class="EN">
                         Since I'm 12 years old, I'm riding Dirt bikes. Today I'm even riding on the road. Motocross is a
-                        complete sport, it's important to stay focus all the time. Today I'm practicing it for fun, but
-                        in the past it did some competitions. It taught me how to keep calm in every situations.
+                        complete sport, it's important to stay focused all the time. Today I'm practicing it for fun,
+                        but
+                        in the past it did some competitions. It taught me how to keep calm in every situation.
                     </p>
                     <p class="FR">
                         Je suis motard depuis mes 12 ans. J'ai tout d'abbord découvert le motcross.
-                        C'est un sport complet qui nécéssite une forte concentration.
+                        C'est un sport complet qui nécessite une forte concentration.
                         Aujourd'hui, je pratique uniquement pour le plaisir, mais
                         par le passé j'ai participé à différentes compétitions.
                     </p>
                     <p class="IT">
-                        Sono motociclista da quando avevo 12 anni. Ho scoperto il motcross prima.
-                        E 'uno sport che richiede alta concentrazione. Oggi io pratico solo per divertimento, ma in
+                        Sono motociclista da quando avevo 12 anni. Ho scoperto il motocross prima.
+                        E uno sport che richiede alta concentrazione. Oggi io pratico solo per divertimento, ma in
                         passato ho partecipato a vari concorsi.
                     </p>
                 </div>
@@ -956,9 +957,10 @@
                         believed to know. That's why in 2015 I decided to spend 6 months abroad in Italy.
                     </p>
                     <p class="FR">
-                        J'aime voyager, il est toujours enrichissant de voir de nouvelles choses, de découvrir de nouvelles façons de vivre. Cela
-                        Change profondément votre façon de penser, parfois cela permet de prendre du recul.
-                        C'est pourquoi en 2015 j'ai décidé de passer 6 mois à l'étranger,en Italie à Sienne.
+                        J'aime voyager, il est toujours enrichissant de voir de nouvelles choses, de découvrir de
+                        nouvelles façons de vivre. Cela
+                        change profondément votre façon de penser, parfois cela permet de prendre du recul.
+                        C'est pourquoi en 2015 j'ai décidé de passer 6 mois à l'étranger, en Italie à Sienne.
                     </p>
                     <p class="IT">
                         Mi piace viaggiare, è sempre importante di vedere cose nuove, scoprire nuovi modi da vivere.
@@ -984,11 +986,13 @@
                 You could also find my resume below.
             </p>
             <p class="FR">
-                N'hésitez pas à me contacter pour me fournir des retours, offrir une opportunité d'emploi, présenter un nouveau projet ...
+                N'hésitez pas à me contacter pour me fournir des retours, offrir une opportunité d'emploi, présenter un
+                nouveau projet ...
                 Vous pouvez également trouver mon CV ci-dessous.
             </p>
             <p class="IT">
-                Non esitate a contattarmi per fornire un feedback, offrire un'opportunità di lavoro, presentare un nuovo progetto ...
+                Non esitate a contattarmi per fornire un feedback, offrire un'opportunità di lavoro, presentare un nuovo
+                progetto ...
                 Si potrebbe anche trovare il mio curriculum di seguito.
             </p>
 
