--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
                         J'aime voyager, il est toujours enrichissant de voir de nouvelles choses, de découvrir de
                         nouvelles façons de vivre. Cela
                         change profondément votre façon de penser, parfois cela permet de prendre du recul.
-                        C'est pourquoi en 2015 j'ai décidé de passer 6 mois à l'étranger, en Italie à Sienne.
+                        C'est pourquoi en 2015 j'ai décidé de passer 6 mois à l'étranger: en Italie.
                     </p>
                     <p class="IT">
                         Mi piace viaggiare, è sempre importante di vedere cose nuove, scoprire nuovi modi da vivere.
