Update Cvs and little italian correction

--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
                 causa di mie esperienze professionali ho acquisito una certa scioltezza ed è diventato un buon
                 istruttore.
                 <br>
-                Io non sono sensibili alla pressione e mi piacciono le sfide; già questo mi ha permesso di distinguermi
-                in varie sfide professionali e sportive.
+                Sono poco sensibile alla pressione e amo raccogliere sfide; questo mi ha già permesso di distinguerlo in
+                occasione di diversi challenge professionali e sportivi.
                 <br>
-                Apprezzo con responsabilità, di essere in grado di prendere l'iniziativa e il lavoro di squadra. In
-                passato questo mi ha permesso di sviluppare me stesso come capo dell'ufficio divisione del partenariato
-                nella associazione di studente della mia scuola.
+                Apprezzo il fatto di avere responsabilità, di potere prendere iniziative ed il lavoro di gruppo. Questo
+                mi ha già permesso di farsi sbocciare come responsabile del polo partenariato dell'ufficio degli
+                studenti della mia scuola.
             </p>
             <hr class="hrFull"/>
         </div>
@@ -719,7 +719,7 @@
                         rete: CCNA CISCO, 1 a 4
                     </li>
                     <li>
-                        I.T Laws: proprietà intellettuale
+                        diritto dell'informatica: proprietà intellettuale
                     </li>
                 </ul>
             </div>
