Add Python as skills

--- a/index.html
+++ b/index.html
@@ -740,6 +740,9 @@
                     C - C++ - C# - .Net
                 </li>
                 <li>
+                    Python
+                </li>
+                <li>
                     HTML/XML - CSS - Javascript - PHP
                 </li>
                 <li>
