Update skills & cosmetic changes

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
             <h2 class="IT">Chi sono?</h2>
 
             <img class="img-rounded imgAlign" src="img/GermainMoreauCVPhoto.jpg" alt="Germain Moreau Cover"
-                 height="150">
+                 height="155">
 
             <p class="EN">
-                Hi, my name is Germain.I'm a 24 years old student in an engineering school.
+                Hi, my name is Germain.I'm a 25 years old student in an engineering school.
                 <br>
                 Currently, I'm doing a professional training contract within Atos Integration as an analyst / developer.
                 <br>
@@ -171,7 +171,7 @@
                 school.
             </p>
             <p class="FR">
-                Bonjour, je m'apelle Germain Moreau. J'ai 24 ans et je suis étudiant en école d'ingénieur.
+                Bonjour, je m'apelle Germain Moreau. J'ai 25 ans et je suis étudiant en école d'ingénieur.
                 <br>
                 Actuellement je suis en contrat de professionnalisation au sein de l'entreprise Atos Integration en tant
                 qu'analyste et développeur.
@@ -194,7 +194,7 @@
                 mon école.
             </p>
             <p class="IT">
-                Ciao, il mio nome è Germain. Sono uno studente di 24 anni in una scuola di ingegneria.
+                Ciao, il mio nome è Germain. Sono uno studente di 25 anni in una scuola di ingegneria.
                 <br>
                 Attualmente, sto facendo un contratto di formazione professionale all'interno di Atos Integrazione come
                 analista e sviluppatore.
@@ -258,7 +258,7 @@
                                 <p class="jobTittle EN">Developper</p>
                                 <p class="jobTittle FR">Développeur</p>
                                 <p class="jobTittle IT">Sviluppatore</p>
-                                <p>
+                                <p class="JobDate">
                                     <small class="text-muted EN"><i class="glyphicon glyphicon-time"></i>July 2016 - Now
                                     </small>
                                     <small class="text-muted FR"><i class="glyphicon glyphicon-time"></i>Juillet 2016 -
@@ -267,25 +267,23 @@
                                     <small class="text-muted IT"><i class="glyphicon glyphicon-time"></i>luglio 2016 -
                                         Ora
                                     </small>
-                                    <br>
-                                    <br>
                                 </p>
-                                <p class="description EN">
-                                    Website development using Jahia, web technologies and JAVA/JEE.
-                                    <br>
-                                    Important team Work and project management, including pre-sales.
-                                </p>
-                                <p class="description FR">
-                                    Mise en place d'une solution WEB pour la CNAV: Jahia - JAVA/JEE - xHTML
-                                    <br>
-                                    Audit d'organisation des moyens de productions pour SKF, avant-vente
-                                </p>
-                                <p class="description IT">
-                                    Sviluppo di siti Web facendo uso di Jahia, di tecnologie web e di JAVA/JEE.
-                                    <br>
-                                    Lavoro di gruppo e Gestione di progetti, compreso le prevendite.
-                                </p>
+                                <ul class="description EN">
+                                    <li>Website development using Jahia, web technologies and JAVA/JEE</li>
+                                    <li>Important team Work and project management, including pre-sales</li>
+                                    <li>Web-application development for SKF: Angular 4.0</li>
+                                </ul>
+                                <ul class="description FR">
+                                    <li>Mise en place d'une solution WEB pour la CNAV: Jahia - JAVA/JEE</li>
+                                    <li>Audit d'organisation des moyens de productions pour SKF, avant-vente</li>
+                                    <li>Développement d'une application Web pour SKF: Angular 4.0</li>
+                                </ul>
 
+                                <ul class="description IT">
+                                    <li>Sviluppo di siti Web facendo uso di Jahia, di tecnologie web e di JAVA/JEE</li>
+                                    <li>Lavoro di gruppo e Gestione di progetti, compreso le prevendite</li>
+                                    <li>Sviluppo di una applicazione web per SKF: Angular 4.0</li>
+                                </ul>
                             </div>
                         </div>
                     </li>
@@ -304,7 +302,7 @@
                                 <p class="jobTittle EN">Assistance Coordinator</p>
                                 <p class="jobTittle FR">Chargé d'assistance</p>
                                 <p class="jobTittle IT">Coordinatore Assistenza</p>
-                                <p>
+                                <p class="JobDate">
                                     <small class="text-muted EN">
                                         <i class="glyphicon glyphicon-time"></i>
                                         June 2013 - January 2016
@@ -317,8 +315,6 @@
                                         <i class="glyphicon glyphicon-time"></i>
                                         Guigno 2013 - Gennaio 2016
                                     </small>
-                                    <br>
-                                    <br>
                                 </p>
                                 <p class="description EN">
                                     Coordination of assistance’s services for insured members.
@@ -355,7 +351,7 @@
                                 <p class="jobTittle EN">Private instructor</p>
                                 <p class="jobTittle FR">Professeur particulier</p>
                                 <p class="jobTittle IT">Professore particolare</p>
-                                <p>
+                                <p class="JobDate">
                                     <small class="text-muted EN">
                                         <i class="glyphicon glyphicon-time"></i>
                                         January 2012 - March 2015
@@ -368,8 +364,6 @@
                                         <i class="glyphicon glyphicon-time"></i>
                                         Gennaio 2012 - Marzo 2015
                                     </small>
-                                    <br>
-                                    <br>
                                 </p>
                                 <p class="description EN">
                                     Tutoring for highschool pupils in mathematics and physics.
@@ -411,7 +405,7 @@
                                 <p class="jobTittle IT">
                                     Supporto Tecnico
                                 </p>
-                                <p>
+                                <p class="JobDate">
                                     <small class="text-muted EN">
                                         <i class="glyphicon glyphicon-time"></i>
                                         July 2012 - September 2012
@@ -424,8 +418,6 @@
                                         <i class="glyphicon glyphicon-time"></i>
                                         Luglio 2012 - Settembre 2012
                                     </small>
-                                    <br>
-                                    <br>
                                 </p>
                                 <p class="description EN">
                                     Computers maintenance and user support.
@@ -459,28 +451,23 @@
                                     Amazon.fr
                                 </h4>
                             </div>
-
                             <div class="timeline-body">
                                 <p class="jobTittle EN">Order picker</p>
                                 <p class="jobTittle FR">Préparateur de commandes</p>
                                 <p class="jobTittle IT">Responsabile del prelievo</p>
-                                <p>
+                                <p class="JobDate">
                                     <small class="text-muted EN">
                                         <i class="glyphicon glyphicon-time"></i>
                                         July 2011 - October 2011
                                     </small>
-                                <p>
                                     <small class="text-muted FR">
                                         <i class="glyphicon glyphicon-time"></i>
                                         Juillet 2011 - Octobre 2011
                                     </small>
-                                <p>
                                     <small class="text-muted IT">
                                         <i class="glyphicon glyphicon-time"></i>
                                         Luglio 2011 - Ottobre 2011
                                     </small>
-                                    <br>
-                                    <br>
                                 </p>
                                 <p class="description EN">
                                     Preparation of orders.
@@ -743,7 +730,10 @@
                     Python
                 </li>
                 <li>
-                    HTML/XML - CSS - Javascript - PHP
+                    HTML/XML - CSS - SASS - Javascript - Angular - Bootstrap
+                </li>
+                <li>
+                    SQL
                 </li>
                 <li>
                     SVN - GIT
@@ -760,10 +750,10 @@
             <div class="EN">
                 <ul>
                     <li>
-                        French: mother tongue ( C2 )
+                        French: Mother tongue ( C2 )
                     </li>
                     <li>
-                        English: Proficient ( C1 )
+                        English: Proficient ( C2 )
                     </li>
                     <li>
                         Italian: Independent ( C1 )
@@ -779,7 +769,7 @@
                         Français: Langue maternelle ( C2 )
                     </li>
                     <li>
-                        Anglais: Autonome ( C1 )
+                        Anglais: Bilingue ( C2 )
                     </li>
                     <li>
                         Italian: Autonome ( C1 )
@@ -792,13 +782,13 @@
             <div class="IT">
                 <ul>
                     <li>
-                        Francese: madrelingua ( C2 )
+                        Francese: Madrelingua ( C2 )
                     </li>
                     <li>
-                        Inglese: avanzato ( C1 )
+                        Inglese: Bilingue ( C2 )
                     </li>
                     <li>
-                        Italiano: avanzato ( C1 )
+                        Italiano: Avanzato ( C1 )
                     </li>
                     <li>
                         Spagnolo: Base ( B2 )
