--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
                         that I've gotten was in 2015 when we won the university national championship in our category.
                     </p>
                     <p class="FR">
-                        J'ai pratiqué ce sport 2 ans au sein de l'équipe masculine de Polytech' Tours.
+                        J'ai pratiqué l'aviron durant 2 ans au sein de l'équipe masculine de Polytech' Tours.
                         Ce qui m'a attiré, c'est l'esprit d'équipe, le fait qu'il soit important de se surpasser pour
                         l'équipe.
                         En 2015, avec mon équipe, nous avons remporté le championnat de France universitaire dans
