--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
                  height="155">
 
             <p class="EN">
-                Hi, my name is Germain.I'm a 25 years old student in an engineering school.
+                Hello, my name is Germain Moreau. I am 25 years old computer engineer.
                 <br>
-                Currently, I'm doing a professional training contract within Atos Integration as an analyst / developer.
+                I am currently working at Acensi as a design and development engineer.
                 <br>
                 <br>
                 At the beginning if I choose to work in computer science that was because it was an intellectually
@@ -166,15 +166,12 @@
                 I'm not sensitive to the pressure and I like challenges; this already allowed me to distinguish myself
                 in various professional and sporting challenges.
                 <br>
-                I appreciate having responsibilities, to be able to take initiative and the teamwork. In the past this
-                allowed me to develop myself as head of the division office of partnerships in the student union of my
-                school.
+                I appreciate having responsibilities, to be able to take initiative and the teamwork.
             </p>
             <p class="FR">
-                Bonjour, je m'apelle Germain Moreau. J'ai 25 ans et je suis étudiant en école d'ingénieur.
+                Bonjour, je m'apelle Germain Moreau. J'ai 25 ans et je suis ingénieur en informatique.
                 <br>
-                Actuellement je suis en contrat de professionnalisation au sein de l'entreprise Atos Integration en tant
-                qu'analyste et développeur.
+                Actuellement je suis en poste au sein d'Acensi en tant qu'Ingénieur d'études et développement.
                 <br>
                 <br>
                 J'ai choisi l'informatique car c'est un domaine stimulant intellectuellement me permettant d'exercer ma
@@ -185,19 +182,17 @@
                 Du fait de mes expériences professionnelles j'ai acquis une certaine aisance à l'oral et suis devenu
                 pédagogue.
                 <br>
+                <br>
                 Je suis peu sensible à la pression et j'aime relever des défis;
                 ceci m'a déjà permis de me distinguer lors de divers challenges professionnels et sportifs.
                 <br>
                 J'apprécie le fait d'avoir des responsabilités, de pouvoir prendre des initiatives et le travail
                 d'équipe.
-                Ceci m'a déjà permis de m'épanouir en tant que responsable du pôle partenariat du bureau des élèves de
-                mon école.
             </p>
             <p class="IT">
-                Ciao, il mio nome è Germain. Sono uno studente di 25 anni in una scuola di ingegneria.
+                Ciao, mi chiamo Germain Moreau. Ho 25 anni e sono un ingegnere informatico.
                 <br>
-                Attualmente, sto facendo un contratto di formazione professionale all'interno di Atos Integrazione come
-                analista e sviluppatore.
+                Attualmente, sto lavorando presso la Acensi come ingegnere informatico.
                 <br>
                 <br>
                 All'inizio, se scelgo di lavorare in informatica era perché era un campo intellettualmente stimolante
@@ -212,9 +207,7 @@
                 Sono poco sensibile alla pressione e amo raccogliere sfide; questo mi ha già permesso di distinguerlo in
                 occasione di diversi challenge professionali e sportivi.
                 <br>
-                Apprezzo il fatto di avere responsabilità, di potere prendere iniziative ed il lavoro di gruppo. Questo
-                mi ha già permesso di farsi sbocciare come responsabile del polo partenariato dell'ufficio degli
-                studenti della mia scuola.
+                Apprezzo il fatto di avere responsabilità, di potere prendere iniziative ed il lavoro di gruppo.
             </p>
             <hr class="hrFull"/>
         </div>
@@ -1039,8 +1032,8 @@
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
         a = s.createElement(o),
             m = s.getElementsByTagName(o)[0];
         a.async = 1;
