--- a/index.html
+++ b/index.html
@@ -235,6 +235,56 @@
                 </p>
                 <ul class="timeline">
 
+                    <!--========= Acensi Section =========-->
+                    <li class="timeline-inverted">
+                        <div class="timeline-badge">
+                            <i class="glyphicon glyphicon-plane"></i>
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="timeline-title">Acensi</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="jobTittle EN">Computer engineer</p>
+                                <p class="jobTittle FR">Ingénieur d'études</p>
+                                <p class="jobTittle IT">Ingegnere informatico</p>
+                                <p class="JobDate">
+                                    <small class="text-muted EN">
+                                        <i class="glyphicon glyphicon-time"></i>
+                                        September 2017 - Now
+                                    </small>
+                                    <small class="text-muted FR">
+                                        <i class="glyphicon glyphicon-time"></i>
+                                        Septembre 2017 - Maintenant
+                                    </small>
+                                    <small class="text-muted IT">
+                                        <i class="glyphicon glyphicon-time"></i>
+                                        Settembre 2017 - Ora
+                                    </small>
+                                </p>
+                                <ul class="description EN">
+                                    <li>Client Interventions</li>
+                                    <li>Acquisition of agile development methodologies</li>
+                                    <li>Application development: Angular 4-5 and Java 8</li>
+                                    <li>Quality: implementation of continuous integration</li>
+                                </ul>
+                                <ul class="description FR">
+                                    <li>Interventions en régie</li>
+                                    <li>Acquisition des méthodologies de développement agiles</li>
+                                    <li>Développement d’applications: Angular 4-5 et Java 8</li>
+                                    <li>Qualité: mise en place d’intégration continue</li>
+                                </ul>
+                                <ul class="description IT">
+                                    <li>Interventi del cliente</li>
+                                    <li>Acquisizione delle metodologie di sviluppo agile</li>
+                                    <li>Sviluppo di applicazioni: Angular 4-5 e Java 8</li>
+                                    <li>Qualità: implementazione dell' integrazione continua</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </li>
+                    <!--=========== END OF Acensi Section ==========-->
+
                     <!--========= Atos Integration Section ===========-->
                     <li>
                         <div class="timeline-badge">
@@ -246,19 +296,19 @@
                                     Atos Integration
                                 </h4>
                             </div>
-
                             <div class="timeline-body">
                                 <p class="jobTittle EN">Developper</p>
                                 <p class="jobTittle FR">Développeur</p>
                                 <p class="jobTittle IT">Sviluppatore</p>
                                 <p class="JobDate">
-                                    <small class="text-muted EN"><i class="glyphicon glyphicon-time"></i>July 2016 - Now
+                                    <small class="text-muted EN"><i class="glyphicon glyphicon-time"></i>
+                                        July 2016 - August 2017
                                     </small>
-                                    <small class="text-muted FR"><i class="glyphicon glyphicon-time"></i>Juillet 2016 -
-                                        Maintenant
+                                    <small class="text-muted FR"><i class="glyphicon glyphicon-time"></i>
+                                        Juillet 2016 - Août 2017
                                     </small>
-                                    <small class="text-muted IT"><i class="glyphicon glyphicon-time"></i>luglio 2016 -
-                                        Ora
+                                    <small class="text-muted IT"><i class="glyphicon glyphicon-time"></i>
+                                        luglio 2016 - Agosto 2017
                                     </small>
                                 </p>
                                 <ul class="description EN">
